# recursion-scheme-examples

./: .projectile  LICENSE  README.md  package.yaml  recursion.cabal
src/: Ana.hs  Apo.hs  BinTree.hs  Cata.hs  Examples.hs  Futu.hs  Gapo.hs  Histo.hs  Histomorphisms.hs  Hylo.hs  Para.hs  README.md  Utilities.hs  Zygo.hs
