name:                recursion
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jd95/recursion#readme
license:             BSD3
license-file:        LICENSE
author:              Jeff
maintainer:          jeffreydwyer95@outlook.com
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Examples
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , recursion-schemes
                     , free                     
		     